configs/k8s/base/network-policies/allow-ml-generator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ml-generator-ingress
  namespace: fitness-platform-production
spec:
  podSelector:
    matchLabels:
      app: ml-generator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: gateway
      ports:
        - protocol: TCP
          port: 8002
